# x2dhf

./: .gitignore  .x2dhfrc  AUTHORS  CMakeLists.txt  ChangeLog  HINTS  INSTALL  LICENSE  Makefile.am  README.md  TODO  autoconf.sh  compile.sh  compile4Libxc.sh  configure  configure.ac  list_of_files_4_bz2.txt  makeLibxc.sh  x2dhfctl  x2dhfctl4t
cmake/: FindLIBXC.cmake  Findlibxc.cmake
docs/: .gitignore  Makefile.am  doi.sty  mhchem.sty  moreverb.sty  users-guide.tex
examples/: Makefile  Makefile.am  Makefile.in
examples/alf/: run4alf
examples/auli/: 00-auli-hfspot.data  auli-htpot.data  auli.com  auli.out  auli.pun  auli_rohf.com  auli_rohf.out
examples/be/: Makefile  be-1.data  be-1.lst  be-lda+sap-1.data  be-lda+sap-1.lst  be-lda+sap-1a.data  be-lda+sap-2.data  be-lda+sap-2.lst  be-lda+sap-3.data  be-lda+sap-3.lst  be-lda+sap-4.data  be-lda+sap-4.lst  be-lda+sap.data  be-lda.data  be-lda.lst  be.data  be.lst  run4be-lda+sap
examples/bef/: Makefile  bef.data  bef.lst
examples/bf/: Makefile  bf.inp  bf_g94.data  bf_g94.lst  bf_g94.out  bf_g94.pun  bf_g94l.data  bf_g94l.lst  bf_g94l.out
examples/bo/: Makefile  bo.data  bo.inp  bo.lst  bo.out  bo.pun
examples/c/: Makefile  c.data  c.lst  c1d2.data  c1d2.lst  c3p1.data  c3p1.lst
examples/c+/: Makefile  c+.data  c+.lst
examples/c2/: Makefile  c2.out  c2.pun  c2a.data  c2a.lst  c2b.data  c2b.lst  c2c.data  c2c.lst
examples/crc/: crc-1.data  crc-2.data  crc-3.data  run4crc
examples/dft/: Makefile  be-1.data  be-1.lst  be-2.data  be-2.lst
examples/f2/: Makefile  f2.data  f2.lst  f2.out  f2.pun
examples/fh/: Makefile  fh-0.data  fh-0.lst  fh-elprop.sh  fh-lda+sap-1.data  fh-lda+sap-1.lst  fh-lda+sap-2.data  fh-lda+sap-2.lst  fh-lda+sap-3.data  fh-lda+sap-3.lst  fh-lda+sap-4.data  fh-lda+sap-4.lst  fh-lda+sap.lst  fh-m1.data  fh-m1.lst  fh-m2.data  fh-m2.lst  fh-p1.data  fh-p1.lst  fh-p2.data  fh-p2.lst  run4fh-lda+sap  runElprop.pl
examples/gaf/: Makefile  gaf.data  gaf.lst
examples/h2/: Makefile  h2.data  h2.lst  h2a.data  h2a.lst  h2b.data  h2b.lst
examples/h2+/: Makefile  h2+.data  h2+.lst
examples/kr/: kr-1.data  kr-1.lst  kr-2.data  kr-2.lst  kr.data  kr.lst  run
examples/li2/: Makefile  li2.data  li2.lst  li2.out  li2.pun
examples/n2/: Makefile  n2.data  n2.lst
examples/ne/: Makefile  ne-a.data  ne-a.lst  ne-b.data  ne-b.lst  ne-c.data  ne-c.lst  ne-lda-1.data  ne-lda-1.lst  ne-lda-2.data  ne-lda-2.lst  ne-lda.data  ne-lda.lst  ne.data  ne.lst
examples/o2/: Makefile  o2-a.data  o2-a.lst  o2-b.data  o2-b.lst  o2.data  o2.lst  o2.out  o2.pun
examples/oed/h3/: Makefile  h3-1.data  h3-1.lst  h3-2.data  h3-2.lst
examples/oed/kh/: Makefile  kh.data  kh.lst
examples/oed/th+89/: Makefile  th+89_1s.data  th+89_1s.lst  th+89_2s.data  th+89_2s.lst
examples/oed/z10-6/: Makefile  z10-6.data  z10-6.lst
examples/scmc/: Makefile  be-scmc.data  be-scmc.lst
examples/xec/: xe-c-1.data  xe-c-1.lst  xe-c-2.data  xe-c-2.lst  xe-c-3.data  xe-c-3.lst  xe-c.out  xe-c.pun
include/: xc_funcs.h
lda_orbitals/: README  README~
src/: .gitignore  CMakeLists.txt  Ea.f90  EaDFT.f90  Eab.f90  Eab1DFT.f90  Eab1HF.f90  Eab2DFT.f90  EabDFT.f90  Makefile  Makefile.am  Makefile.in  Makefilef90  blas.F90  blas.f90  card.f90  card.mod  checkLabel.f90  checkOrbSym.f90  checkOrtho.f90  checkPot.f90  checkSym.f90  commons.F90  commons16.f90  commons16.mod  commons8.f90  commons8.mod  contrib.f90  contriborb.f90  contriborbDFT.f90  coulAsympt.f90  coulAsymptCont.f90  coulMCSOR.f90  coulMom.f90  coulSOR.f90  coulombExchangePotentials.f90  data4II.f90  dateTime.f90  detect.F90  dftauxfun.f90  (+276 more)
src/c/: coulExch_pthread.c  coulExch_tpool.c  mcsor_pthread.c  mcsor_single_colour_pthread.c  mcsor_single_colour_tpool.c  mcsor_tpool.c  relax_single_pot_pthread.c  relax_single_pot_tpool.c  sorpt.c  sorpt.h  tpool.h
test-sets/al/set-01/: input.data  reference.lst
test-sets/al/set-02/: input.data  reference.lst  run
test-sets/al/set-03/: input.data  reference.lst
test-sets/al/set-04/: input.data  reference.lst
test-sets/alf/set-01/: input.data  reference-1.lst  reference.lst
test-sets/alf/set-02/: input.data  reference.lst
test-sets/alf/set-03/: input.data  reference.lst
test-sets/ar-elprop/set-01/: input.data  reference.lst  run  status
test-sets/ar-elprop/set-02/: input.data  reference.lst  status
test-sets/ar-elprop/set-03/: input.data  reference.lst  status
test-sets/ar-elprop/set-04/: input.data  reference.lst  run  status
test-sets/ar-elprop/set-05/: input.data  reference.lst  status
test-sets/ar/set-01/: input.data  reference.lst
test-sets/arc-pec/set-01/: input.data  reference.lst
test-sets/b/set-01/: input.data  reference.lst  status
test-sets/be-elprop/set-01/: input.data  reference.lst  status
test-sets/be-elprop/set-02/: input.data  reference.lst  status
test-sets/be-elprop/set-03/: input.data  reference.lst  run  status
test-sets/be-elprop/set-04/: input.data  reference.lst  status
test-sets/be-elprop/set-05/: input.data  reference.lst  status
test-sets/be/set-01/: input.data  reference.lst  run  status
test-sets/be/set-02/: input-1.data  input-2.data  reference.lst  run  status
test-sets/be/set-03/: input-1.data  input-2.data  reference.lst  run  status
test-sets/be/set-04/: be-hf.exch  input.data  reference.lst  status
test-sets/be/set-05/: input.data  reference.lst  run  status
test-sets/be/set-06/: input.data  reference.lst  run  status
test-sets/be/set-07/: input.data  reference.lst  run
test-sets/be/set-08/: be-hf.coul  be-hf.orb  input-1.data  input-2.data  reference.lst  run  status
test-sets/be/set-09/: input-1.data  input-2.data  input-3.data  reference.lst  run
test-sets/be/set-10/: input-1.data  input-2.data  reference.lst  run  status
test-sets/be/set-11/: input.data  run
test-sets/be/set-12/: input.data  reference.lst  run
test-sets/be/set-13/: input-1.data  (+8 more)
tests/: Makefile.am  lxcctl  xhf
utils/: Makefile  Makefile.am  Makefile.in  change2i64.pl  changeDouble2Quad.pl  changeVersion.pl  elprop.pl  lstgrep.sh  lsttail.sh  runelprop.pl
(+768 files in other folders)
